--- a/NuGet.config
+++ b/NuGet.config
@@ -10,6 +10,7 @@
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
     <add key="symreader-converter" value="https://dotnet.myget.org/F/symreader-converter/api/v3/index.json" />
     <add key="symreader" value="https://dotnet.myget.org/F/symreader/api/v3/index.json" />
+    <add key="general-testing" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/general-testing/nuget/v3/index.json" />
   </packageSources>
   <disabledPackageSources>
     <clear />
