--- a/NuGet.config
+++ b/NuGet.config
@@ -9,6 +9,7 @@
     <add key="dotnet-eng" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-eng/nuget/v3/index.json" />
     <add key="dotnet-tools" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-tools/nuget/v3/index.json" />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
+    <add key="general-testing" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/general-testing/nuget/v3/index.json" />
     <!-- this feed is only added to test functionality in the SetupNuGetSources scripts -->
     <add key="fake-source-will-break-if-enabled" value="https://fake-source/nuget/v3/index.json" />
   </packageSources>
